--- a/app/scripts/十万少年漫游500690.html
+++ b/app/scripts/十万少年漫游500690.html
@@ -130,10 +130,10 @@
                                 <span style="-webkit-tap-highlight-color: ; letter-spacing: 0px; line-height: 1.6; font-size: 14px; font-family: 微软雅黑;">1、<span style="letter-spacing: 0px; line-height: 1.6; font-size: 14px; -webkit-tap-highlight-color: ; font-weight: 700;">直播时间：8月19日—8月28日</span></span>
                             </p>
                             <p style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); font-family: FZLTXHK--GBK1-0, &#39;Lantinghei SC&#39;, &#39;Helvetica Neue&#39;, Helvetica, STHeiTi, sans-serif; color: rgb(62, 62, 62); line-height: 25.6px; text-align: justify; white-space: normal;">
-                                <span style="-webkit-tap-highlight-color: ; font-size: 14px; font-family: 微软雅黑;">2、10万份众筹认领成功之后，认领众筹的家长将于<span style="font-size: 14px; -webkit-tap-highlight-color: ; font-weight: 700; font-family: 微软雅黑;">8月1日—8月18日期间收到直播的链接和邀请，以及具体直播时间</span>；</span>
+                                <span style="-webkit-tap-highlight-color: ; font-size: 14px; font-family: 微软雅黑;">2、<span style="color: rgb(62, 62, 62); font-family: 微软雅黑; font-size: 14px; line-height: 25.6px; text-align: justify; background-color: rgb(255, 255, 255);">10万份活动售出之后，</span><span style="color: rgb(62, 62, 62); font-family: 微软雅黑; font-size: 14px; line-height: 25.6px; text-align: justify; background-color: rgb(255, 255, 255);">购买活动</span><span style="color: rgb(62, 62, 62); font-family: 微软雅黑; font-size: 14px; line-height: 25.6px; text-align: justify; background-color: rgb(255, 255, 255);">的家长将于</span><strong style="color: rgb(62, 62, 62); font-family: 微软雅黑; font-size: 14px; line-height: 25.6px; text-align: justify; white-space: normal; background-color: rgb(255, 255, 255);">8月1日—8月18日期间收到直播的链接和邀请</strong><strong style="color: rgb(62, 62, 62); font-family: 微软雅黑; font-size: 14px; line-height: 25.6px; text-align: justify; white-space: normal; background-color: rgb(255, 255, 255);">，具体直播时间为8月19日—8月28日下午15:00-17:00，每场直播时长约为1.5-2小时</strong><span style="color: rgb(62, 62, 62); font-family: 微软雅黑; font-size: 14px; line-height: 25.6px; text-align: justify; background-color: rgb(255, 255, 255);">；</span></span>
                             </p>
                             <p style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); font-family: FZLTXHK--GBK1-0, &#39;Lantinghei SC&#39;, &#39;Helvetica Neue&#39;, Helvetica, STHeiTi, sans-serif; color: rgb(62, 62, 62); line-height: 25.6px; text-align: justify; white-space: normal;">
-                                <span style="-webkit-tap-highlight-color: ; font-size: 14px; font-family: 微软雅黑;">3、直播链接和邀请以及具体直播时间将以<span style="font-size: 14px; -webkit-tap-highlight-color: ; font-weight: 700; font-family: 微软雅黑;">短信或微信</span>的方式通知，请认领众筹的家长关注<span style="font-size: 14px; -webkit-tap-highlight-color: ; font-weight: 700; font-family: 微软雅黑;">“Ahaschool芝麻学社”</span>公众号，了解最新资讯。</span>
+                                <span style="-webkit-tap-highlight-color: ; font-size: 14px; font-family: 微软雅黑;">3、直播链接和邀请以及具体直播时间将以<span style="font-size: 14px; -webkit-tap-highlight-color: ; font-weight: 700; font-family: 微软雅黑;">短信或微信</span>的方式通知，请购买活动的家长关注<span style="font-size: 14px; -webkit-tap-highlight-color: ; font-weight: 700; font-family: 微软雅黑;">“Ahaschool芝麻学社”</span>公众号，了解最新资讯。</span>
                             </p>
                             <p style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); font-family: FZLTXHK--GBK1-0, &#39;Lantinghei SC&#39;, &#39;Helvetica Neue&#39;, Helvetica, STHeiTi, sans-serif; color: rgb(62, 62, 62); line-height: 25.6px; text-align: justify; white-space: normal;">
                                 <span style="-webkit-tap-highlight-color: ; font-size: 14px; font-family: 微软雅黑;">4、倘若遇到不可抗情况，直播将延期，具体时间会另行通知。</span>
@@ -193,7 +193,7 @@
                         <span style="-webkit-tap-highlight-color: ; font-weight: 700; font-family: 微软雅黑;">Q :&nbsp;直播持续多久？</span>
                     </p>
                     <p style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); margin-bottom: 15px; font-family: FZLTXHK--GBK1-0, &#39;Lantinghei SC&#39;, &#39;Helvetica Neue&#39;, Helvetica, STHeiTi, sans-serif; color: rgb(62, 62, 62); font-size: 14px; line-height: 25.6px; text-align: justify; white-space: normal;">
-                        <span style="-webkit-tap-highlight-color: ; font-family: 微软雅黑;"><span style="-webkit-tap-highlight-color: ; font-weight: 700; line-height: 25.6px; font-family: 微软雅黑;">A :&nbsp;</span>总共十个博物馆，每个博物馆一场直播，每场直播暂定1小时。</span>
+                        <span style="-webkit-tap-highlight-color: ; font-family: 微软雅黑;"><span style="-webkit-tap-highlight-color: ; font-weight: 700; line-height: 25.6px; font-family: 微软雅黑;">A :&nbsp;</span>总共十个博物馆，每个博物馆一场直播，每场直播暂定1.5-2小时。</span>
                     </p>
                     <p style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); font-family: FZLTXHK--GBK1-0, &#39;Lantinghei SC&#39;, &#39;Helvetica Neue&#39;, Helvetica, STHeiTi, sans-serif; color: rgb(62, 62, 62); font-size: 14px; line-height: 25.6px; text-align: justify; white-space: normal;">
                         <span style="-webkit-tap-highlight-color: ; font-weight: 700; font-family: 微软雅黑;">Q :&nbsp;没赶上直播，是否可以回看？</span>
@@ -205,13 +205,13 @@
                         <span style="-webkit-tap-highlight-color: ; font-weight: 700; font-family: 微软雅黑;">Q :&nbsp;直播的话，中国时间大概几点？</span>
                     </p>
                     <p style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); margin-bottom: 15px; font-family: FZLTXHK--GBK1-0, &#39;Lantinghei SC&#39;, &#39;Helvetica Neue&#39;, Helvetica, STHeiTi, sans-serif; color: rgb(62, 62, 62); font-size: 14px; line-height: 25.6px; text-align: justify; white-space: normal;">
-                        <span style="-webkit-tap-highlight-color: ; font-family: 微软雅黑;"><span style="-webkit-tap-highlight-color: ; font-weight: 700; line-height: 25.6px; font-family: 微软雅黑;">A :&nbsp;</span>时间会尽量根据国内时间安排，但是也需要考虑和各个国家不同的时差以及博物馆的开馆时间，如时间实在不可调和，建议看录播。</span>
+                        <span style="-webkit-tap-highlight-color: ; font-family: 微软雅黑;"><span style="-webkit-tap-highlight-color: ; font-weight: 700; line-height: 25.6px; font-family: 微软雅黑;">A :&nbsp;</span>时间会尽量根据国内时间安排，<span style="color: rgb(62, 62, 62); font-size: 14px; line-height: 25.6px; text-align: justify; background-color: rgb(255, 255, 255);">具体时间段为8.19-8.28日每天下午15:00-17:00之间。</span></span>
                     </p>
                     <p style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); font-family: FZLTXHK--GBK1-0, &#39;Lantinghei SC&#39;, &#39;Helvetica Neue&#39;, Helvetica, STHeiTi, sans-serif; color: rgb(62, 62, 62); font-size: 14px; line-height: 25.6px; text-align: justify; white-space: normal;">
-                        <span style="-webkit-tap-highlight-color: ; font-weight: 700; font-family: 微软雅黑;">Q :&nbsp;众筹完怎样通知？</span>
+                        <span style="-webkit-tap-highlight-color: ; font-weight: 700; font-family: 微软雅黑;">Q : 10份活动购买完成之后怎样通知家长观看直播？</span>
                     </p>
                     <p style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); margin-bottom: 15px; font-family: FZLTXHK--GBK1-0, &#39;Lantinghei SC&#39;, &#39;Helvetica Neue&#39;, Helvetica, STHeiTi, sans-serif; color: rgb(62, 62, 62); font-size: 14px; line-height: 25.6px; text-align: justify; white-space: normal;">
-                        <span style="-webkit-tap-highlight-color: ; font-family: 微软雅黑;"><span style="-webkit-tap-highlight-color: ; font-weight: 700; line-height: 25.6px; font-family: 微软雅黑;">A :&nbsp;</span>众筹完成后，我们将以短信和微信的方式通知所有认购此次活动的用户，请关注我们官方公众号“Ahaschool芝麻学社”，及时了解最新资讯。</span>
+                        <span style="-webkit-tap-highlight-color: ; font-family: 微软雅黑;"><span style="-webkit-tap-highlight-color: ; font-weight: 700; line-height: 25.6px; font-family: 微软雅黑;">A : </span>10万份活动购买完成后，我们将以短信和微信的方式通知所有认购此次活动的用户，请关注我们官方公众号“Ahaschool芝麻学社”，及时了解最新资讯。</span>
                     </p>
                     <p style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); font-family: FZLTXHK--GBK1-0, &#39;Lantinghei SC&#39;, &#39;Helvetica Neue&#39;, Helvetica, STHeiTi, sans-serif; color: rgb(62, 62, 62); font-size: 14px; line-height: 25.6px; text-align: justify; white-space: normal;">
                         <span style="-webkit-tap-highlight-color: ; font-weight: 700; font-family: 微软雅黑;">Q :&nbsp;直播的博物馆确定是哪十个吗？</span>
@@ -388,6 +388,30 @@
         </p>
         <p>
             <span style="font-size: 14px;">博物馆由两部分建筑组成，位于菩提树下大街上的是有300多年历史的柏林军械库，它是柏林第一座巴洛克式大型建筑，也是菩提树下大街上最老的建筑。军械库的后面是世界著名建筑大师贝聿铭先生设计的新馆，建成于2004年。<span style="font-size: 14px; line-height: 24px; text-indent: 28px; font-family: 微软雅黑; color: #000000;">德国历史博物馆总共收藏了85万件不会说话的证人。</span></span>
+        </p>
+        <p>
+            <span style="font-size: 14px;"><span style="font-size: 14px; line-height: 24px; text-indent: 28px; font-family: 微软雅黑; color: #000000;"><br/></span></span>
+        </p>
+        <p>
+            <span style="font-size: 14px;"><span style="font-size: 14px; line-height: 24px; text-indent: 28px; font-family: 微软雅黑; color: #000000;"></span></span>
+        </p>
+        <p style="color: rgb(62, 62, 62); font-family: sans-serif; line-height: 25.6px; white-space: normal; text-align: center; background-color: rgb(255, 255, 255);">
+            <span style="color: rgb(255, 76, 65);"><strong>【友情提示】</strong></span><br/>
+        </p>
+        <p style="color: rgb(62, 62, 62); font-family: sans-serif; line-height: 25.6px; white-space: normal; text-align: center; background-color: rgb(255, 255, 255);">
+            <span style="color: rgb(255, 76, 65);">如有任何问题可直接在公众号回复活动关键字</span>
+        </p>
+        <p style="color: rgb(62, 62, 62); font-family: sans-serif; line-height: 25.6px; white-space: normal; text-align: center; background-color: rgb(255, 255, 255);">
+            <span style="color: rgb(255, 76, 65);">您也可以直接联系芝麻助教：400-631-3223</span>
+        </p>
+        <p style="margin-bottom: 10px; color: rgb(62, 62, 62); font-family: sans-serif; line-height: 25.6px; white-space: normal; text-align: center; background-color: rgb(255, 255, 255);">
+            <span style="color: rgb(255, 76, 65);">客服芝麻助教将竭诚为您服务</span>
+        </p>
+        <p style="color: rgb(62, 62, 62); font-family: sans-serif; line-height: 25.6px; white-space: normal; background-color: rgb(255, 255, 255);">
+            <span style="color: rgb(255, 76, 65);">PS：“芝麻助教”咨询时间为：10:00--19:30（周一至周五），活动咨询人数较多，如未及时回复，请耐心等待！</span>
+        </p>
+        <p>
+            <span style="font-size: 14px;"><span style="font-size: 14px; line-height: 24px; text-indent: 28px; font-family: 微软雅黑; color: #000000;"><br/></span></span><br/>
         </p>
         <p style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0); font-family: &#39;Helvetica Neue&#39;, Helvetica, &#39;Hiragino Sans GB&#39;, &#39;Microsoft YaHei&#39;, Arial, sans-serif; color: rgb(62, 62, 62); font-size: 14px; white-space: normal; line-height: 25.2px; text-align: justify; word-break: normal !important;">
             <br/>
