--- a/app/scripts/十万少年漫游500724.html
+++ b/app/scripts/十万少年漫游500724.html
@@ -1,8 +1,3 @@
-<html>
-<head>
-    <meta charset="utf-8">
-</head>
-<body>
 <section style="font-family: sans-serif; font-size: 16px; white-space: normal; max-width: 100%; box-sizing: border-box; color: rgb(62, 62, 62); line-height: 25.6px; word-wrap: break-word !important; background-color: rgb(255, 255, 255);">
     <section class="" powered-by="xiumi.us" style="max-width: 100%; box-sizing: border-box; word-wrap: break-word !important;">
         <section class="" style="margin-top: 10px; margin-bottom: 10px; max-width: 100%; box-sizing: border-box; word-wrap: break-word !important;">
@@ -224,11 +219,89 @@
                     7.以技术驱动教育，以游戏化、自适应、任务型等方式等实现学习效率革命。
                 </p>
                 <p style="max-width: 100%; box-sizing: border-box; min-height: 1em; word-wrap: break-word !important;">
-                    所以，我希望这次活动，带给孩子的不仅仅是十场直播，更是一次发现新的自己，打开新世界的旅程。
+                    所以，我希望这次众筹，带给孩子的不仅仅是十场直播，更是一次发现新的自己，打开新世界的旅程。
                 </p>
                 <p style="max-width: 100%; box-sizing: border-box; min-height: 1em; word-wrap: break-word !important;">
                     <br/>
                 </p>
+            </section>
+        </section>
+    </section>
+    <section class="" powered-by="xiumi.us" style="max-width: 100%; box-sizing: border-box; word-wrap: break-word !important;">
+        <section class="" style="max-width: 100%; box-sizing: border-box; word-wrap: break-word !important;">
+            <section class="" style="max-width: 100%; box-sizing: border-box; font-size: 14px; text-align: justify; word-wrap: break-word !important;">
+                <article id="m626" class="yead_editor yead-selected" data-author="Wxeditor" style="font-size:14px;border:0px;padding:0px;margin:5px auto;white-space: normal;">
+                    <section style="margin:10px auto 30px;padding:0;max-width:100%;font-size:16px;line-height:25px;white-space:normal;background-color:#fff;text-align:center;box-sizing:border-box!important;word-wrap:break-word!important">
+                        <section class="yead_bdlc yead_bdrc" style="margin:0;padding:0;max-width:100%;box-sizing:border-box!important;word-wrap:break-word!important;border-top-width:20px;border-top-style:solid;border-color:transparent #000001;border-bottom-width:0;border-bottom-style:solid;border-right-width:15px;border-right-style:solid;display:inline-block;height:15px;vertical-align:top"></section>
+                        <section class="yead_bdc" style="margin:0;padding:5px 10px;max-width:100%;box-sizing:border-box!important;word-wrap:break-word!important;display:inline-block;height:35px;color:#fff;border:1px solid #212122;background-color:#fefefe">
+                            <strong><span style="margin:0;padding:0;max-width:100%;box-sizing:border-box!important;word-wrap:break-word!important;color:#000">赞助商</span></strong>
+                        </section>
+                        <section class="yead_bdlc yead_bdrc" style="margin:0;padding:0;max-width:100%;box-sizing:border-box!important;word-wrap:break-word!important;border-top-width:20px;border-top-style:solid;border-color:transparent #000001;border-bottom-width:0;border-bottom-style:solid;border-left-width:15px;border-left-style:solid;display:inline-block;height:15px;vertical-align:top"></section>
+                        <section class="yead_bdtc" style="margin:-16px 0 0;padding:0;max-width:100%;box-sizing:border-box!important;word-wrap:break-word!important;height:1px;border-top-width:1px;border-top-style:solid;border-top-color:#212122"></section>
+                    </section>
+                </article>
+                <p style="min-height: 1em;">
+                    麦萌联合品格周刊及育儿周刊，倾情赞助“十万少年漫游世界十大博物馆”活动，为十万孩子打造奇妙之旅！
+                </p>
+                <p style="max-width: 100%; box-sizing: border-box; min-height: 1em; word-wrap: break-word !important;">
+                    <br/>
+                </p>
+            </section>
+        </section>
+    </section>
+    <section style="background-color: rgb(255, 255, 255);">
+        <section class="Powered-by-XIUMI V5" style="position: static;" powered-by="xiumi.us">
+            <section class="" style="text-align: center; margin-top: 10px; margin-bottom: 10px; position: static;">
+                <img style="vertical-align: middle;" class="" src="http://img.xiumi.us/xmi/ua/DqSu/i/f67b9b93640098864e3de2cc8caa7f50-sz_180883.jpg?x-oss-process=style/xm" data-ratio="1.3296875" data-w="640"/>
+            </section>
+        </section>
+        <section class="Powered-by-XIUMI V5" style="position: static;" powered-by="xiumi.us">
+            <section class="" style="position: static;">
+                <section class="">
+                    <p style="margin-top: 0px; margin-bottom: 0px; padding: 0px;">
+                        蓝剑饮品集团，0添加剂饮品的开创者，专注健康30年。
+                    </p>
+                    <p style="margin-top: 0px; margin-bottom: 0px; padding: 0px;">
+                        <br/>
+                    </p>
+                    <p style="margin-top: 0px; margin-bottom: 0px; padding: 0px;">
+                        蓝剑.麦萌0添加剂儿童饮品&nbsp;<span style="letter-spacing: 0px; line-height: 1.6;">全球首款0添加剂儿童饮品。（发现添加任何添加剂每瓶奖励10000元）</span>
+                    </p>
+                    <p style="margin-top: 0px; margin-bottom: 0px; padding: 0px;">
+                        <br/>
+                    </p>
+                    <p style="margin-top: 0px; margin-bottom: 0px; padding: 0px;">
+                        精选多种坚果和麦胚搭配新西兰奶粉，补充动物蛋白和植物蛋白双重蛋白，富含多种维生素与矿物质。
+                    </p>
+                    <p style="margin-top: 0px; margin-bottom: 0px; padding: 0px;">
+                        <br/>
+                    </p>
+                    <p style="margin-top: 0px; margin-bottom: 0px; padding: 0px;">
+                        选用欧盟标准婴儿奶瓶材料制作瓶身，耐高温蒸煮，最大程度保证品质保护宝宝健康。
+                    </p>
+                    <p style="margin-top: 0px; margin-bottom: 0px; padding: 0px;">
+                        <br/>
+                    </p>
+                </section>
+            </section>
+        </section>
+        <section class="Powered-by-XIUMI V5" style="position: static;" powered-by="xiumi.us">
+            <section class="" style="text-align: center; margin-top: 10px; margin-bottom: 10px; position: static;">
+                <img style="vertical-align: middle;" class="" src="http://img.xiumi.us/xmi/ua/DqSu/i/1ae97996279e395e091daae6b6abf80c-sz_35024.jpg?x-oss-process=style/xm" data-ratio="0.5546875" data-w="640"/>
+            </section>
+        </section>
+        <section class="Powered-by-XIUMI V5" style="position: static;" powered-by="xiumi.us">
+            <section class="" style="text-align: center; margin-top: 10px; margin-bottom: 10px; position: static;">
+                <img style="vertical-align: middle;" class="" src="http://img.xiumi.us/xmi/ua/DqSu/i/41b881dbab618432991468a760bb4bc4-sz_32709.jpg?x-oss-process=style/xm" data-ratio="0.4295775" data-w="568"/>
+            </section>
+        </section>
+        <section class="Powered-by-XIUMI V5" style="position: static;" powered-by="xiumi.us">
+            <section class="" style="position: static;">
+                <section class="">
+                    <p style="margin-top: 0px; margin-bottom: 0px; padding: 0px;">
+                        <br/>
+                    </p>
+                </section>
             </section>
         </section>
     </section>
@@ -341,13 +414,13 @@
                             <span style="font-size: 14px;">1、<strong>在6.1—8.19期间</strong>购买活动的家长将以<strong>39.9元/份</strong>的超低价格观看<strong>十场直播</strong>，<strong>10人成团</strong>更有<strong>19.9元/份</strong>的超低团购价！每场直播时长约为<strong>1.5-2小时</strong>，直播内容包括但不仅限于美术作品、建筑设计、历史故事等。</span>
                         </p>
                         <p>
-                            <span style="font-size: 14px;">2、直播结束后，购买活动的家长可免费获得资源，观看回放。</span>
+                            <span style="font-size: 14px;">2、直播结束后，<span style="color: rgb(62, 62, 62); font-family: 微软雅黑; line-height: 25.6px; background-color: rgb(255, 255, 255);">购买活动</span>的家长可免费获得资源，观看回放。</span>
                         </p>
                         <p>
-                            <span style="font-size: 14px;">3、超低价购买时间结束后，观看直播的价格将上调为99元/份。</span>
+                            <span style="font-size: 14px;">3、<span style="color: rgb(62, 62, 62); font-family: 微软雅黑; line-height: 25.6px; background-color: rgb(255, 255, 255);">超低价购买时间结束后，观看直播的价格将上调为99元/份</span>。</span>
                         </p>
                         <p>
-                            <span style="font-size: 14px;">4、<span style="color: rgb(62, 62, 62); font-family: 微软雅黑; font-size: 14px; background-color: rgb(255, 255, 255);">购买活动</span>的家长将有权对直播看点进行投票选择，选出大家最感兴趣的直播看点。</span>
+                            <span style="font-size: 14px;">4、<span style="color: rgb(62, 62, 62); font-family: 微软雅黑; line-height: 25.6px; background-color: rgb(255, 255, 255);"></span><span style="color: rgb(62, 62, 62); font-family: 微软雅黑; line-height: 25.6px; background-color: rgb(255, 255, 255);">购买活动</span><span style="color: rgb(62, 62, 62); font-family: 微软雅黑; line-height: 25.6px; background-color: rgb(255, 255, 255);">的家长将有权对直播看点进行投票选择，选出大家最感兴趣的直播看点。</span></span>
                         </p>
                         <p>
                             <br/>
@@ -388,15 +461,18 @@
                                                     <section class="">
                                                         <section class="" style="text-align: justify;">
                                                             <p>
+                                                                <span style="letter-spacing: 0px; line-height: 1.6; font-size: 14px;"></span>
+                                                            </p>
+                                                            <p style="color: rgb(62, 62, 62); font-family: 微软雅黑; font-size: 16px; line-height: 25.6px; text-align: justify; white-space: normal; background-color: rgb(255, 255, 255);">
                                                                 <span style="letter-spacing: 0px; line-height: 1.6; font-size: 14px;">1、<strong>直播时间：8月19日—8月28日</strong></span>
                                                             </p>
-                                                            <p>
-                                                                <span style="font-size: 14px;">2、10万份活动售出之后，<span style="color: rgb(62, 62, 62); font-family: 微软雅黑; font-size: 14px; background-color: rgb(255, 255, 255);">购买活动</span>的家长将于<strong>8月1日—8月18日期间收到直播的链接和邀请</strong><strong>，具体直播时间为8月19日—8月28日下午15:00-17:00，每场直播时长约为1.5-2小时</strong>；</span>
+                                                            <p style="color: rgb(62, 62, 62); font-family: 微软雅黑; font-size: 16px; line-height: 25.6px; text-align: justify; white-space: normal; background-color: rgb(255, 255, 255);">
+                                                                <span style="font-size: 14px;">2、<span style="color: rgb(62, 62, 62); font-family: 微软雅黑; font-size: 14px; line-height: 25.6px; text-align: justify; background-color: rgb(255, 255, 255);">10万份活动售出之后，</span><span style="color: rgb(62, 62, 62); font-family: 微软雅黑; font-size: 14px; line-height: 25.6px; text-align: justify; background-color: rgb(255, 255, 255);">购买活动</span><span style="color: rgb(62, 62, 62); font-family: 微软雅黑; font-size: 14px; line-height: 25.6px; text-align: justify; background-color: rgb(255, 255, 255);">的家长将于</span><strong style="color: rgb(62, 62, 62); font-family: 微软雅黑; font-size: 14px; line-height: 25.6px; text-align: justify; white-space: normal; background-color: rgb(255, 255, 255);">8月1日—8月18日期间收到直播的链接和邀请</strong><strong style="color: rgb(62, 62, 62); font-family: 微软雅黑; font-size: 14px; line-height: 25.6px; text-align: justify; white-space: normal; background-color: rgb(255, 255, 255);">，具体直播时间为8月19日—8月28日下午15:00-17:00，每场直播时长约为1.5-2小时</strong><span style="color: rgb(62, 62, 62); font-family: 微软雅黑; font-size: 14px; line-height: 25.6px; text-align: justify; background-color: rgb(255, 255, 255);">；</span></span>
                                                             </p>
-                                                            <p>
-                                                                <span style="font-size: 14px;">3、关注“<strong style="color: rgb(62, 62, 62); font-family: 微软雅黑; font-size: 14px; text-align: justify; white-space: normal; background-color: rgb(255, 255, 255);">Ahaschool芝麻学社</strong>”公众号，直播链接和邀请以及具体直播时间将以<strong>短信或微信后台</strong>的方式通知，请购买活动的家长<strong>千万不要取关</strong></span><strong style="font-size: 14px;">公众号</strong><span style="font-size: 14px;">哦，以防遗漏信息。</span>
+                                                            <p style="color: rgb(62, 62, 62); font-family: 微软雅黑; font-size: 16px; line-height: 25.6px; text-align: justify; white-space: normal; background-color: rgb(255, 255, 255);">
+                                                                <span style="font-size: 14px;">3、直播链接和邀请以及具体直播时间将以<strong>短信或微信后台</strong>的方式通知，请购买活动的家长<strong>千万不要取关公众号</strong>哦，以防遗漏信息。</span>
                                                             </p>
-                                                            <p>
+                                                            <p style="color: rgb(62, 62, 62); font-family: 微软雅黑; font-size: 16px; line-height: 25.6px; text-align: justify; white-space: normal; background-color: rgb(255, 255, 255);">
                                                                 <span style="font-size: 14px;">4、倘若遇到不可抗情况，直播将延期，具体时间会另行通知。</span>
                                                             </p>
                                                         </section>
@@ -475,7 +551,7 @@
                     <br/>
                 </p>
                 <p style="max-width: 100%; box-sizing: border-box; min-height: 1em; word-wrap: break-word !important;">
-                    我们将在直播之前筛选建筑、历史、艺术品等多个博物馆看点，让所有购买直播活动的家长进行评选，选出大家最感兴趣的博物馆直播看点。
+                    <span style="color: rgb(62, 62, 62); font-size: 14px; line-height: 25.6px; text-align: justify; background-color: rgb(255, 255, 255);">我们将在直播之前筛选建筑、历史、艺术品等多个博物馆看点，让所有购买直播活动的家长进行评选，选出大家最感兴趣的博物馆直播看点。</span>
                 </p>
                 <p style="max-width: 100%; box-sizing: border-box; min-height: 1em; word-wrap: break-word !important;">
                     <br/>
@@ -525,34 +601,22 @@
                     <span style="font-size: 14px;"><strong style="color: rgb(62, 62, 62); font-family: sans-serif; line-height: 25.6px; text-align: justify; white-space: normal; background-color: rgb(255, 255, 255);">A :&nbsp;</strong>时间会尽量根据国内时间安排，<span style="color: rgb(62, 62, 62); font-size: 14px; line-height: 25.6px; text-align: justify; background-color: rgb(255, 255, 255);">具体时间段为8.19-8.28日每天下午15:00-17:00之间。</span></span>
                 </p>
                 <p>
-                    <strong><span style="font-size: 14px;">Q : 10万份活动购买完成之后怎样通知家长观看直播？</span></strong>
+                    <strong><span style="font-size: 14px;"></span></strong>
                 </p>
-                <p style="margin-bottom: 15px;">
-                    <span style="font-size: 14px;"><strong style="color: rgb(62, 62, 62); font-family: sans-serif; line-height: 25.6px; text-align: justify; white-space: normal; background-color: rgb(255, 255, 255);">A :&nbsp;</strong>10万份活动购买完成后，我们将以短信和微信的方式通知所有认购此次活动的用户，请关注我们官方公众号“Ahaschool芝麻学社”，及时了解最新资讯。</span>
+                <p style="color: rgb(62, 62, 62); font-family: sans-serif; line-height: 25.6px; text-align: justify; white-space: normal; background-color: rgb(255, 255, 255);">
+                    <strong>Q : 10万份活动购买完成之后怎样通知家长观看直播？</strong>
+                </p>
+                <p style="margin-bottom: 15px; color: rgb(62, 62, 62); font-family: sans-serif; line-height: 25.6px; text-align: justify; white-space: normal; background-color: rgb(255, 255, 255);">
+                    <strong style="line-height: 25.6px;">A :&nbsp;</strong>10万份活动购买完成后，我们将以短信和微信的方式通知所有认购此次活动的用户，请关注我们官方公众号“Ahaschool芝麻学社”，及时了解最新资讯。
+                </p>
+                <p>
+                    <span style="font-size: 14px;"></span><br/>
                 </p>
                 <p>
                     <strong><span style="font-size: 14px;">Q :&nbsp;直播的博物馆确定是哪十个吗？</span></strong>
                 </p>
                 <p>
                     <span style="font-size: 14px;"><strong style="color: rgb(62, 62, 62); font-family: sans-serif; line-height: 25.6px; text-align: justify; white-space: normal; background-color: rgb(255, 255, 255);">A :&nbsp;</strong>直播的场馆目前暂定为购买详情中的十大博物馆，但具体要根据时差、场馆开放情况等进行调整，实际以播出为准。</span>
-                </p>
-                <p>
-                    <strong><br/></strong>
-                </p>
-                <p>
-                    <strong>Q：直播是否清晰？</strong><br/>
-                </p>
-                <p>
-                    <strong>A：</strong>我们会邀请专业的摄影团队进行直播拍摄，并积极和各大知名直播平台进行合作沟通，确保直播质量。
-                </p>
-                <p>
-                    <br/>
-                </p>
-                <p style="color: rgb(62, 62, 62); font-size: 14px; text-align: justify; white-space: normal; background-color: rgb(255, 255, 255);">
-                    <strong>Q：博物馆确定可以直播吗？</strong><br/>
-                </p>
-                <p style="color: rgb(62, 62, 62); font-size: 14px; text-align: justify; white-space: normal; background-color: rgb(255, 255, 255);">
-                    <strong>A：</strong>为了保证直播顺利进行，我们对全世界的顶级博物馆进行了全方面筛选，选出10大博物馆及备选博物馆，根据不同博物馆的需要，配备专业讲解员、提前递交拍摄申请等。具体可以参考<a href="https://shimo.im/doc/br6OIvcv5bgARabl/" target="_self" style="color: rgb(255, 0, 0); text-decoration: underline;"><span style="color: rgb(255, 0, 0);">十大博物馆及备选博物馆参观说明</span></a>
                 </p>
                 <p style="max-width: 100%; box-sizing: border-box; min-height: 1em; word-wrap: break-word !important;">
                     <br/>
@@ -629,15 +693,6 @@
             <section class="" style="max-width: 100%; box-sizing: border-box; font-size: 14px; word-wrap: break-word !important;">
                 <p style="max-width: 100%; box-sizing: border-box; min-height: 1em; text-align: justify; word-wrap: break-word !important;">
                     奥赛博物馆与卢浮宫、蓬皮杜中心一道被称为巴黎三大艺术博物馆。馆内主要陈列1848年至1914年间创作的西方艺术作品，聚集了法国近代文化艺术的精华，填补了法国文化艺术发展史上从古代艺术到现代艺术之间的空白，使奥赛博物馆成成为联结古代艺术殿堂卢浮宫和现代艺术殿堂蓬皮杜中心的完美的中间过渡。
-                </p>
-            </section>
-        </section>
-    </section>
-    <section class="" powered-by="xiumi.us" style="max-width: 100%; box-sizing: border-box; word-wrap: break-word !important;">
-        <section class="" style="max-width: 100%; box-sizing: border-box; word-wrap: break-word !important;">
-            <section class="" style="max-width: 100%; box-sizing: border-box; word-wrap: break-word !important;">
-                <p style="max-width: 100%; box-sizing: border-box; min-height: 1em; word-wrap: break-word !important;">
-                    <br/>
                 </p>
             </section>
         </section>
@@ -937,5 +992,3 @@
 <p>
     <br/>
 </p>
-</body>
-</html>
