--- a/app/scripts/十万少年漫游500730.html
+++ b/app/scripts/十万少年漫游500730.html
@@ -1,8 +1,3 @@
-<html>
-<head>
-    <meta charset="utf-8">
-</head>
-<body>
 <section style="font-family: sans-serif; font-size: 16px; white-space: normal; max-width: 100%; box-sizing: border-box; color: rgb(62, 62, 62); line-height: 25.6px; word-wrap: break-word !important; background-color: rgb(255, 255, 255);">
     <section class="" powered-by="xiumi.us" style="max-width: 100%; box-sizing: border-box; word-wrap: break-word !important;">
         <section class="" style="margin-top: 10px; margin-bottom: 10px; max-width: 100%; box-sizing: border-box; word-wrap: break-word !important;">
@@ -234,6 +229,55 @@
     </section>
     <section class="" powered-by="xiumi.us" style="max-width: 100%; box-sizing: border-box; word-wrap: break-word !important;">
         <section class="" style="margin-top: 0.5em; margin-bottom: 0.5em; max-width: 100%; box-sizing: border-box; word-wrap: break-word !important;">
+            <section class="" style="margin-right: 1em; margin-left: 1em; max-width: 100%; box-sizing: border-box; height: 0px; border-top-width: 1.5em; border-top-style: solid; border-bottom-width: 1.5em; border-bottom-style: solid; border-bottom-color: rgb(160, 160, 160); border-top-color: rgb(160, 160, 160); word-wrap: break-word !important; border-left-width: 1.5em !important; border-left-style: solid !important; border-left-color: transparent !important; border-right-width: 1.5em !important; border-right-style: solid !important; border-right-color: transparent !important;"></section>
+            <section class="" style="margin: -2.75em 1.65em -2.3em; max-width: 100%; box-sizing: border-box; height: 0px; border-width: 1.3em; border-style: solid; border-color: rgb(255, 255, 255) transparent; word-wrap: break-word !important;"></section>
+            <section class="" style="max-width: 100%; box-sizing: border-box; height: 2.6em; word-wrap: break-word !important;">
+                <section style="margin-right: 2.1em; margin-left: 2.1em; max-width: 100%; box-sizing: border-box; height: 0px; vertical-align: middle; border-top-width: 1.1em; border-top-style: solid; border-bottom-width: 1.1em; border-bottom-style: solid; border-bottom-color: rgb(160, 160, 160); border-top-color: rgb(160, 160, 160); word-wrap: break-word !important; border-left-width: 1.1em !important; border-left-style: solid !important; border-left-color: transparent !important; border-right-width: 1.1em !important; border-right-style: solid !important; border-right-color: transparent !important;">
+                    <section class="" style="margin-top: -0.8em; max-width: 100%; box-sizing: border-box; text-align: center; color: rgb(7, 7, 7); word-wrap: break-word !important;">
+                        <p style="max-width: 100%; box-sizing: border-box; min-height: 1em; word-wrap: break-word !important;">
+                            <strong style="max-width: 100%; box-sizing: border-box; word-wrap: break-word !important;">联合发起人</strong>
+                        </p>
+                    </section>
+                </section>
+            </section>
+        </section>
+    </section>
+    <section class="" powered-by="xiumi.us" style="max-width: 100%; box-sizing: border-box; word-wrap: break-word !important;">
+        <section class="" style="margin-top: 10px; margin-bottom: 10px; max-width: 100%; box-sizing: border-box; text-align: center; word-wrap: break-word !important;">
+            <img class="" data-ratio="0.3671875" src="http://resource.huijiame.com/5954a19e49b9c8OtBoqGuYs.png" data-type="png" data-w="640" style="box-sizing: border-box; vertical-align: middle; word-wrap: break-word !important; width: auto !important; visibility: visible !important;"/>
+        </section>
+    </section>
+    <section class="" powered-by="xiumi.us" style="max-width: 100%; box-sizing: border-box; word-wrap: break-word !important;">
+        <section class="" style="max-width: 100%; box-sizing: border-box; word-wrap: break-word !important;">
+            <section class="" style="max-width: 100%; box-sizing: border-box; font-size: 14px; word-wrap: break-word !important;">
+                <p style="max-width: 100%; box-sizing: border-box; min-height: 1em; text-align: justify; word-wrap: break-word !important;">
+                    <br/>
+                </p>
+                <p style="max-width: 100%; box-sizing: border-box; min-height: 1em; text-align: justify; word-wrap: break-word !important;">
+                    返利成立于2006年，是中国领先的电商导购平台，拥有用户超1.4亿，为用户提供涵盖线上、线下消费的360°的返利服务，包括网上购物、线下刷卡、金融保险、旅行团购等。
+                </p>
+            </section>
+        </section>
+    </section>
+    <section class="" powered-by="xiumi.us" style="max-width: 100%; box-sizing: border-box; word-wrap: break-word !important;">
+        <section class="" style="margin-top: 10px; margin-bottom: 10px; max-width: 100%; box-sizing: border-box; text-align: center; word-wrap: break-word !important;">
+            <img class="" data-ratio="0.3671875" src="http://resource.huijiame.com/5954c564a49fdmfuZ0G1bQX.png" data-type="png" data-w="640" style="box-sizing: border-box; vertical-align: middle; word-wrap: break-word !important; width: auto !important; visibility: visible !important;"/>
+        </section>
+    </section>
+    <section class="" powered-by="xiumi.us" style="max-width: 100%; box-sizing: border-box; word-wrap: break-word !important;">
+        <section class="" style="max-width: 100%; box-sizing: border-box; word-wrap: break-word !important;">
+            <section class="" style="max-width: 100%; box-sizing: border-box; font-size: 14px; word-wrap: break-word !important;">
+                <p style="max-width: 100%; box-sizing: border-box; min-height: 1em; text-align: justify; word-wrap: break-word !important;">
+                    <br/>
+                </p>
+                <p style="max-width: 100%; box-sizing: border-box; min-height: 1em; text-align: justify; word-wrap: break-word !important;">
+                    关注【返利优选】并回复“福利”，可参与0元购一箱莫斯利安酸奶！
+                </p>
+            </section>
+        </section>
+    </section>
+    <section class="" powered-by="xiumi.us" style="max-width: 100%; box-sizing: border-box; word-wrap: break-word !important;">
+        <section class="" style="margin-top: 0.5em; margin-bottom: 0.5em; max-width: 100%; box-sizing: border-box; word-wrap: break-word !important;">
             <section class="" style="margin-right: 1em; margin-left: 1em; max-width: 100%; box-sizing: border-box; height: 0px; border-top-width: 1.5em; border-top-style: solid; border-top-color: rgb(160, 160, 160); border-bottom-width: 1.5em; border-bottom-style: solid; border-bottom-color: rgb(160, 160, 160); word-wrap: break-word !important; border-left-width: 1.5em !important; border-left-style: solid !important; border-left-color: transparent !important; border-right-width: 1.5em !important; border-right-style: solid !important; border-right-color: transparent !important;"></section>
             <section class="" style="margin: -2.75em 1.65em -2.3em; max-width: 100%; box-sizing: border-box; height: 0px; border-width: 1.3em; border-style: solid; border-color: rgb(255, 255, 255) transparent; word-wrap: break-word !important;"></section>
             <section class="" style="max-width: 100%; box-sizing: border-box; height: 2.6em; word-wrap: break-word !important;">
@@ -391,10 +435,10 @@
                                                                 <span style="letter-spacing: 0px; line-height: 1.6; font-size: 14px;">1、<strong>直播时间：8月19日—8月28日</strong></span>
                                                             </p>
                                                             <p>
-                                                                <span style="font-size: 14px;">2、10万份活动售出之后，<span style="color: rgb(62, 62, 62); font-family: 微软雅黑; font-size: 14px; background-color: rgb(255, 255, 255);">购买活动</span>的家长将于<strong>8月1日—8月18日期间收到直播的链接和邀请</strong><strong>，具体直播时间为8月19日—8月28日下午15:00-17:00，每场直播时长约为1.5-2小时</strong>；</span>
+                                                                <span style="font-size: 14px;">2、<span style="color: rgb(62, 62, 62); font-family: 微软雅黑; font-size: 14px; line-height: 25.6px; text-align: justify; background-color: rgb(255, 255, 255);">10万份活动售出之后，</span><span style="color: rgb(62, 62, 62); font-family: 微软雅黑; font-size: 14px; line-height: 25.6px; text-align: justify; background-color: rgb(255, 255, 255);">购买活动</span><span style="color: rgb(62, 62, 62); font-family: 微软雅黑; font-size: 14px; line-height: 25.6px; text-align: justify; background-color: rgb(255, 255, 255);">的家长将于</span><strong style="color: rgb(62, 62, 62); font-family: 微软雅黑; font-size: 14px; line-height: 25.6px; text-align: justify; white-space: normal; background-color: rgb(255, 255, 255);">8月1日—8月18日期间收到直播的链接和邀请</strong><strong style="color: rgb(62, 62, 62); font-family: 微软雅黑; font-size: 14px; line-height: 25.6px; text-align: justify; white-space: normal; background-color: rgb(255, 255, 255);">，具体直播时间为8月19日—8月28日下午15:00-17:00，每场直播时长约为1.5-2小时</strong><span style="color: rgb(62, 62, 62); font-family: 微软雅黑; font-size: 14px; line-height: 25.6px; text-align: justify; background-color: rgb(255, 255, 255);">；</span></span>
                                                             </p>
                                                             <p>
-                                                                <span style="font-size: 14px;">3、关注“<strong style="color: rgb(62, 62, 62); font-family: 微软雅黑; font-size: 14px; text-align: justify; white-space: normal; background-color: rgb(255, 255, 255);">Ahaschool芝麻学社</strong>”公众号，直播链接和邀请以及具体直播时间将以<strong>短信或微信后台</strong>的方式通知，请购买活动的家长<strong>千万不要取关</strong></span><strong style="font-size: 14px;">公众号</strong><span style="font-size: 14px;">哦，以防遗漏信息。</span>
+                                                                <span style="font-size: 14px;">3、直播链接和邀请以及具体直播时间将以<strong>短信或微信后台</strong>的方式通知，请购买活动的家长<strong>千万不要取关公众号</strong>哦，以防遗漏信息。</span>
                                                             </p>
                                                             <p>
                                                                 <span style="font-size: 14px;">4、倘若遇到不可抗情况，直播将延期，具体时间会另行通知。</span>
@@ -522,7 +566,7 @@
                     <strong><span style="font-size: 14px;">Q :&nbsp;直播的话，中国时间大概几点？</span></strong>
                 </p>
                 <p style="margin-bottom: 15px;">
-                    <span style="font-size: 14px;"><strong style="color: rgb(62, 62, 62); font-family: sans-serif; line-height: 25.6px; text-align: justify; white-space: normal; background-color: rgb(255, 255, 255);">A :&nbsp;</strong>时间会尽量根据国内时间安排，<span style="color: rgb(62, 62, 62); font-size: 14px; line-height: 25.6px; text-align: justify; background-color: rgb(255, 255, 255);">具体时间段为8.19-8.28日每天下午15:00-17:00之间。</span></span>
+                    <span style="font-size: 14px;"><strong style="color: rgb(62, 62, 62); font-family: sans-serif; line-height: 25.6px; text-align: justify; white-space: normal; background-color: rgb(255, 255, 255);">A :&nbsp;</strong>时间会尽量根据国内时间安排，具体时间段为8.19-8.28日每天下午15:00-17:00之间。</span>
                 </p>
                 <p>
                     <strong><span style="font-size: 14px;">Q : 10万份活动购买完成之后怎样通知家长观看直播？</span></strong>
@@ -629,15 +673,6 @@
             <section class="" style="max-width: 100%; box-sizing: border-box; font-size: 14px; word-wrap: break-word !important;">
                 <p style="max-width: 100%; box-sizing: border-box; min-height: 1em; text-align: justify; word-wrap: break-word !important;">
                     奥赛博物馆与卢浮宫、蓬皮杜中心一道被称为巴黎三大艺术博物馆。馆内主要陈列1848年至1914年间创作的西方艺术作品，聚集了法国近代文化艺术的精华，填补了法国文化艺术发展史上从古代艺术到现代艺术之间的空白，使奥赛博物馆成成为联结古代艺术殿堂卢浮宫和现代艺术殿堂蓬皮杜中心的完美的中间过渡。
-                </p>
-            </section>
-        </section>
-    </section>
-    <section class="" powered-by="xiumi.us" style="max-width: 100%; box-sizing: border-box; word-wrap: break-word !important;">
-        <section class="" style="max-width: 100%; box-sizing: border-box; word-wrap: break-word !important;">
-            <section class="" style="max-width: 100%; box-sizing: border-box; word-wrap: break-word !important;">
-                <p style="max-width: 100%; box-sizing: border-box; min-height: 1em; word-wrap: break-word !important;">
-                    <br/>
                 </p>
             </section>
         </section>
@@ -907,24 +942,6 @@
                 <p style="max-width: 100%; box-sizing: border-box; min-height: 1em; text-align: justify; word-wrap: break-word !important;">
                     <br/>
                 </p>
-                <p style="color: rgb(62, 62, 62); font-family: sans-serif; line-height: 25.6px; white-space: normal; text-align: center; background-color: rgb(255, 255, 255);">
-                    <span style="color: rgb(255, 76, 65);"><strong>【友情提示】</strong></span><br/>
-                </p>
-                <p style="color: rgb(62, 62, 62); font-family: sans-serif; line-height: 25.6px; white-space: normal; text-align: center; background-color: rgb(255, 255, 255);">
-                    <span style="color: rgb(255, 76, 65);">如有任何问题可直接在公众号回复活动关键字</span>
-                </p>
-                <p style="color: rgb(62, 62, 62); font-family: sans-serif; line-height: 25.6px; white-space: normal; text-align: center; background-color: rgb(255, 255, 255);">
-                    <span style="color: rgb(255, 76, 65);">您也可以直接联系芝麻助教：400-631-3223</span>
-                </p>
-                <p style="margin-bottom: 10px; color: rgb(62, 62, 62); font-family: sans-serif; line-height: 25.6px; white-space: normal; text-align: center; background-color: rgb(255, 255, 255);">
-                    <span style="color: rgb(255, 76, 65);">客服芝麻助教将竭诚为您服务</span>
-                </p>
-                <p style="color: rgb(62, 62, 62); font-family: sans-serif; line-height: 25.6px; white-space: normal; background-color: rgb(255, 255, 255);">
-                    <span style="color: rgb(255, 76, 65);">PS：“芝麻助教”咨询时间为：10:00--19:30（周一至周五），活动咨询人数较多，如未及时回复，请耐心等待！</span>
-                </p>
-                <p style="max-width: 100%; box-sizing: border-box; min-height: 1em; text-align: justify; word-wrap: break-word !important;">
-                    <br/>
-                </p>
             </section>
         </section>
     </section>
@@ -937,5 +954,3 @@
 <p>
     <br/>
 </p>
-</body>
-</html>
