--- a/app/rem.html
+++ b/app/rem.html
@@ -2,9 +2,156 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>rem2px and px2rem</title>
+    <style>
+        html, body {
+            width: 100%;
+            height: 100%;
+            background: #ebebeb;
+            box-sizing: border-box;
+            overflow: hidden;
+        }
+
+        .main {
+            display: block;
+            width: 100%;
+            height: 100%;
+            padding: 40px 80px;
+            box-sizing: border-box;
+            font-size: 24px;
+            overflow: hidden;
+        }
+
+        .left {
+            background: #ccc;
+            float: left;
+            width: 40%;
+            height: 100%;
+            box-sizing: border-box;
+        }
+
+        .right {
+            background: #ddd;
+            float: right;
+            width: 40%;
+            height: 100%;
+            box-sizing: border-box;
+        }
+
+        .left > h1, .right > h1 {
+            text-align: center;
+        }
+
+        .content {
+            width: 100%;
+            padding: 10px;
+            border: 1px #ccc solid;
+            background-color: #fbfbfb;
+            border: 1px solid #d5d5d5;
+            box-sizing: border-box;
+        }
+
+        .content:focus {
+            outline: 0;
+        }
+
+        .px-input {
+            padding: 5px 10px;
+            font-size: 24px;
+            width: 150px;
+        }
+
+        .center {
+            box-sizing: border-box;
+            float: left;
+            height: 100%;
+            display: block;
+        }
+
+        .center-tmp {
+            width: 100%;
+            height: 100%;
+        }
+
+        .center-content {
+            display: table;
+            vertical-align: middle;
+        }
+
+        .center-input {
+            display: table-cell;
+        }
+    </style>
 </head>
 <body>
-$END$
+<div class="main">
+    <div class="left" id="txtSourceRem">
+        <h1>source</h1>
+        <textarea class="content" rows="21"></textarea>
+    </div>
+    <div class="right" id="txtDestRem">
+        <h1>result</h1>
+        <textarea class="content" rows="21"></textarea>
+    </div>
+    <div class="center" id="txtRemIntalize">
+        <h1>&nbsp;</h1>
+        <div class="center-tmp">
+            <div class="center-content">
+                <div class="center-input">
+                    1rem = <input class="px-input" type="text" value=""/>px
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<script src="vendor/jquery/jquery.min.js"></script>
+<script>
+    $(function () {
+        $("#btnToRem").click(function () {
+            var text = $("#txtSourceRem").val();
+            var rem = $("#txtRemIntalize").val();
+            if (text == "") {
+                error("请填写要转换的CSS");
+            }
+            else if (rem == "") {
+                error("请填写1rem等于多少px值");
+            }
+            else if (rem <= 0) {
+                error("请填写正确的px值");
+            }
+            else {
+                text = $.format(text, {method: "css"});   // 都转换成多行来比较
+                var arr = text.split("\n");
+                var sb = '';
+                for (var i = 0; i < arr.length; i++) {
+                    var line = arr[i];
+                    sb += line.replace(/\d+px/g, function (px) {
+                                if ($("#chkIgnoreBorder").is(":checked")) {
+                                    if (!/border:/ig.test(line)) {
+                                        return (parseInt(px) / parseInt(rem)) + "rem";
+                                    }
+                                    else {
+                                        return px;
+                                    }
+                                }
+                                else {
+                                    return (parseInt(px) / parseInt(rem)) + "rem";
+                                }
+                            }) + "\n";
+                }
+                var source = $("#txtSourceRem").val();
+                var sourceArr = source.split("\n");
+                var len = sourceArr.length;
+                if (len > 1) {
+                    sb = $.format(sb, {method: "css"});
+                }
+                else {
+                    sb = $.format(sb, {method: "cssmin"});
+                }
+                $("#txtDestRem").val(sb);
+            }
+        });
+    });
+</script>
 </body>
 </html>
